# fccf

./: .clang-format  .clang-tidy  CMakeLists.txt
source/: lexer.cpp  lexer.hpp  main.cpp  searcher.cpp  searcher.hpp  sse2_strstr.cpp  strstr.cpp  strstr.hpp  thread_pool.hpp  utf8.cpp  utf8.h
